#22481 Fix Alert conf popup overflow

--- a/src/app/shared/components/confirmation-result-popup/confirmation-result-popup.component.scss
+++ b/src/app/shared/components/confirmation-result-popup/confirmation-result-popup.component.scss
@@ -1,3 +1,5 @@
 ::ng-deep .confirmation-result-popup {
   max-width: 700px;
+  max-height: calc(100% - 30px);
+  overflow-y: auto;
 }
